# buku

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  CHANGELOG  CODE_OF_CONDUCT.md  Dockerfile  MANIFEST.in  Makefile  README.md  buku  buku.1  buku.py  ci-test-wrapper  er  markit  markit.1  packagecore.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.spec  tox.bat  tox.ini
.circleci/: config.yml
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
api/: requirements.txt  server.py  server.py.bak
auto-completion/bash/: buku-completion.bash
auto-completion/fish/: buku.fish
auto-completion/zsh/: _buku
buku/: __init__.py  buku.py  bukuconstants.py  bukucrypt.py  bukuimporter.py  bukunetworking.py  bukuutil.py  extended_argument_parser.py
buku/tests/: ci-test-wrapper  test_helpers.py
bukuserver/: README.md  README.rst  __init__.py  __main__.py  api.py  bookmarklet.js  filters.py  forms.py  requirements.txt  response.py  server.py  util.py  views.py
bukuserver-runner/: README.md  buku-server-headless.desktop  buku-server.desktop  buku-server.py
bukuserver/apidocs/: template.yml
bukuserver/middleware/: __init__.py  flask_reverse_proxy_fix.py
bukuserver/translations/: .gitignore  README.md  __init__.py  __main__.py  babel.cfg  messages_custom.pot
docker-compose/: docker-compose.yml
docs/: Makefile  conf.py  index.rst
docs/source/: buku.rst  bukuserver.rst  conf.py  index.rst  modules.rst  tutorial_for_developer.md
export-template/: template.tmpl
locale/: buku.pot
tests/: .flake8  .pylintrc  25491522.json  25491522_res.pickle  25491522_res_nopt.pickle  __init__.py  ci-test-wrapper  conftest.py  firefox_res.pickle  firefox_res_nopt.pickle  genbm.sh  pytest.ini  run_tests.sh  test_BukuCrypt.py  test_BukuHTMLParser.py  test_ExtendedArgumentParser.py  test_buku.py  test_bukuDb.py  test_bukuDb.py.bak  test_cli.py  test_helpers.py  test_import_firefox_json.py  test_requirements.py  test_server.py  test_setup.py  test_views.py  util.py
tests/test_bukuDb/: .gitignore  25491522_res.yaml  25491522_res_nopt.yaml  Bookmarks  firefox_res.yaml  firefox_res_nopt.yaml  places.sql
tests/vcr_cassettes/: .gitignore  test_add_rec_exec_arg[kwargs0-exp_arg0].yaml  test_add_rec_exec_arg[kwargs4-exp_arg4].yaml  test_add_rec_exec_arg[kwargs5-exp_arg5].yaml  test_add_rec_exec_arg[kwargs6-exp_arg6].yaml  test_browse_by_index.yaml  test_delete_rec_range_and_delay_commit.yaml  test_load_firefox_database[True].yaml  test_network_handler_with_url[http:example.com-exp_res1].yaml  test_network_handler_with_url[http:example.compage1.txt-exp_res2].yaml  test_network_handler_with_url[http:www.vim.orgscriptsscript.php?script_id=4641-exp_res7].yaml  test_print_rec_hypothesis.yaml  (+8 more)
tools/: makedeb
(+95 files in other folders)
